# ice

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CHANGELOG.md  CLA.md  Dockerfile  LICENSE.md  MANIFEST.in  README.md  amplification.py  answers.json  anthropic_test.py  assess_ethics.ipynb  compare_ethics-gpt4.ipynb  compare_ethics.ipynb  conftest.py  debate.py  debug.txt  deontology_test_hard.csv_chatgpt_amplified.json  docker-compose-nvidia.yaml  docker-compose.action.yml  docker-compose.build-streamlit.yml  docker-compose.build-torch.yml  docker-compose.build.yml  docker-compose.streamlit.yml  docker-compose.torch.yml  docker-compose.yaml  docker-compose.yml  ethics_suite.jsonl_chatgpt_evaluations.json  ethics_suite.jsonl_claude_evaluations.json  eval_gold_paragraphs.py  fly.toml  hello.py  main.py  make_release.sh  mypy.ini  (+11 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: checks.yml  chromatic.yml  cla.yml  codeql-analysis.yml  deploy-preview-all.yml  deploy-preview-frontend.yml  deploy-preview.yml  deploy-prod-all.yml  deploy-prod-frontend.yml  deploy-prod.yml  tests.yml
benchmarks/results/: ethics_suite.jsonl_instruct_evaluations.json  justice_test_hard.csv_chatgpt.json  justice_test_hard.csv_chatgpt_amplified.json  justice_test_hard_chatgpt.json
cache/: .gitignore  README.md  openai_complete.sqlite-journal
debate/: inputs.json  prompt.py  recipe.py  testDebates.py
ethics/: README.txt
ethics/commonsense/: cm_ambig.csv  cm_test.csv  cm_test_hard.csv
ethics/deontology/: deontology_test.csv  deontology_test_hard.csv  deontology_train.csv
ethics/justice/: justice_test_hard.csv  justice_train.csv
ethics/utilitarianism/: util_test.csv  util_test_hard.csv  util_train.csv
ethics/virtue/: virtue_test.csv  virtue_test_hard.csv  virtue_train.csv
gold_standards/: README.md  gold_standards.csv  paragraph_synthesis_gs.csv
ice/: __init__.py  agent.py  cache.py  cli_utils.py  environment.py  execution_context.py  f.py  json_value.py  logging.py  mode.py  paper.py  peekable_queue.py  recipe.py  server.py  settings.py  sqlite_shelf.py  streamlit_utils.py  summarize.py  trace.py  trace_reader.py  utils.py  web.py  work_queue.py
ice/agents/: __init__.py  anthropic.py  approval.py  augmented.py  base.py  cached.py  fake.py  human.py  openai.py  openai_reasoning.py  ought_inference.py  squad.py  tfew.py
ice/apis/: openai.py
ice/contrib/: README.md
ice/datasets/: qasper.py  qasper.yaml
ice/evaluation/: evaluate_recipe_result.py  evaluation_report.py  summarize_experiment_evals.py  utils.py
ice/formatter/: multi.py
ice/kelvin/: TYPES.md  history.py  models.py  rows.py  session.txt  utils.py  view.py  workspace.py
ice/metrics/: base.py  gold_paragraphs.py  gold_standards.py  nubia.py  qasper.py  rouge.py
ice/nn/: bert_t5_t0_ensemble.py  bert_t5_t0_example.py  tfew.py
ice/recipes/: __init__.py  abstract_qa.py  adherence_keyword_baseline.py  adherence_simple.py  adherence_tfew_paragraph.py  all_quotes.py  answer_n_times.py  answer_until_best.py  best_completion.py  blinding_dynamic.py  clean_data_py.py  combine_abstract_answers.py  comparisons_qa.py  embeddings_classify.py  eval_synthesize.py  eval_vs_gs.py  evaluate_result.py  evaluate_results.py  experiment_arms.py  finalN.py  find_best_few_shot.py  find_best_few_shot_prompt.py  funnel_simple.py  jawwsify.py  placebo_description.py  placebo_dialogs.py  placebo_keyword_baseline.py  placebo_simple.py  placebo_tree.py  prompts.py  rank_paragraphs.py  rephrase.py  run-over-gs.py  run_over_gs.py  single_prompt.py  subrecipe_example.py  summarize_n_times.py  summarize_until_best.py  synthesize.py  synthesize_chain_of_thought.py  (+7 more)
ice/routes/: agents.py  app.py  auth.py  base.py  kelvin.py  traces.py
k8s/: README.md  label-studio-manifest.yaml
kelvin/: api.ts  package-lock.json  package.json  types.ts
kelvin/components/: Action.tsx  ActionCard.tsx  ActionForm.tsx  Card.tsx  CardRow.tsx  CurrentCard.tsx  Error.tsx  Expander.tsx  Loading.tsx  NotFound.tsx  Panes.tsx  Param.tsx  RequestStatus.tsx  SelectionList.tsx  StatusBar.tsx  TextCard.tsx  Workspace.tsx
kelvin/contexts/: workspaceContext.tsx
kelvin/helpers/: recipes.ts
kelvin/hooks/: useActionHotkeys.ts  useWorkspace.tsx
kelvin/pages/: _app.tsx  index.tsx
kelvin/patches/: react-archer+4.1.0.patch
kelvin/types/: index.tsx
kelvin/utils/: workspace.ts
papers/: .gitignore  GiveWell strength of evidence dataset - Sheet1 (3).csv  README.md  abebe-2018-small.txt  abebe-2018-tiny.txt  keenan-2018-tiny.txt
scripts/: checks.sh  eval-gold-paragraphs.sh  eval-in-app-qa.sh  generate-ts-models.sh  release.sh  run-fastapi-dev.sh  run-local.sh  run-recipe.sh  run-streamlit.sh  run-tests-action.sh  run-tests.sh  summarize-experiment-evals.sh  update-primer.py
scripts/runs-in-container/: start-backend.sh
signatures/version1/: cla.json
streamlits/: home.py
streamlits/pages/: elicit_outline.py  gold_standard_paragraphs.py  placebo_classification_histogram.py  playground.py  results_viewer.py
tests/: test_f.py  test_json.py  test_kelvin.py  test_main.py  test_metrics.py  test_paper.py  test_primer_recipes.py  test_regression.py  test_summarize.py  test_trace.py  test_utils.py  test_work_queue.py
tests/expected_traces/: AdherenceKeywordBaseline.json  AdherenceParagraphTfew.json  AdherenceSimpleInstruct.json  AllQuotesRecipe.json  BlindingDynamic.json  ComparisonsQA.json  EvaluateResult.json  EvaluateResults.json  ExampleMetaRecipe.json  FunnelSimple.json  PlaceboDescriptionInstruct.json  PlaceboKeywordBaseline.json  PlaceboSimpleInstruct.json  test_all_primer_recipes[answer0].json  test_all_primer_recipes[answer1].json  test_all_primer_recipes[answer_by_amplification0].json  test_all_primer_recipes[answer_by_amplification1].json  test_all_primer_recipes[answer_by_amplification2].json  (+21 more)
ui/: .env  README.md  client.d.ts  index.html  main.tsx  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
(+208 files in other folders)
