[metadata]
name = ought-ice
author = Ought
author_email = team@ought.org
license = MIT
description = Interactive Composition Explorer
url = https://github.com/oughtinc/ice
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
packages = ice
install_requires =
    Faker
    defopt
    fastapi
    httpx
    merge-args
    nest-asyncio
    nltk
    numerizer==0.2.1
    numpy
    pandas
    pydantic
    python-Levenshtein
    python-dotenv
    questionary
    rich
    rouge-metric
    ruamel.yaml
    structlog
    tenacity
    thefuzz
    tqdm
    transformers
    ulid-py
    uvicorn
    websockets

setup_requires = setuptools>=44; setuptools_scm[toml]>=3.4.3
include_package_data = True

[options.extras_require]
dev =
    autoflake
    black
    flake8
    mypy
    pre-commit
    pylint
    pytest
    pytest-cov
    pytest-mock
streamlit =
    plotly
    stqdm
    streamlit
torch =
    protobuf
    sentencepiece
    torch
