[metadata]
name = ought-ice
author = Ought
author_email = team@ought.org
license = MIT
description = Interactive Composition Explorer
url = https://github.com/oughtinc/ice
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License

[options]
packages = ice
install_requires =
    defopt
    faker
    fastapi
    fvalues
    httpx
    matplotlib
    merge-args
    more-itertools
    nest-asyncio
    nltk
    numerizer
    numpy
    pandas
    pydantic < 2
    python-Levenshtein
    python-dotenv
    python-ulid
    questionary
    rich
    rouge-metric
    ruamel.yaml
    scikit-learn
    structlog
    tenacity
    thefuzz
    tqdm
    transformers
    typing-extensions
    uvicorn
    websockets

python_requires = >=3.9
setup_requires = setuptools>=44; setuptools_scm[toml]>=3.4.3
include_package_data = True

[options.extras_require]
dev =
    autoflake
    black
    flake8
    mypy
    pre-commit
    pylint
    pytest
    pytest-cov
    pytest-mock
torch =
    protobuf
    sentencepiece
    torch
